Add jSpecify node.service package.