@@ -1,29 +1,29 @@
 /* ==================================================================
  * DatumMetadataService.java - Oct 6, 2014 12:17:53 PM
- * 
+ *
  * Copyright 2007-2014 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
 
 package net.solarnetwork.node.service;
 
-import java.util.Collections;
 import java.util.Set;
+import org.jspecify.annotations.Nullable;
 import net.solarnetwork.domain.datum.GeneralDatumMetadata;
 import net.solarnetwork.domain.datum.ObjectDatumKind;
 import net.solarnetwork.domain.datum.ObjectDatumStreamMetadata;
@@ -31,7 +31,7 @@ import net.solarnetwork.domain.datum.ObjectDatumStreamMetadata;
 /**
  * API for manipulating {@link GeneralDatumMetadata} associated with a datum
  * source.
- * 
+ *
  * @author matt
  * @version 2.1
  */
@@ -39,19 +39,19 @@ public interface DatumMetadataService {
 
 	/**
 	 * Get the set of source IDs with associated datum metadata.
-	 * 
+	 *
 	 * @return the available source IDs, never {@code null}
 	 * @since 2.1
 	 */
 	default Set<String> availableSourceMetadataSourceIds() {
-		return Collections.emptySet();
+		return Set.of();
 	}
 
 	/**
 	 * Add metadata to a specific source. If metadata already exists for the
 	 * given source, the values will be merged such that tags are only added and
 	 * only new info values will be added.
-	 * 
+	 *
 	 * @param sourceId
 	 *        the source ID to add to
 	 * @param meta
@@ -61,16 +61,17 @@ public interface DatumMetadataService {
 
 	/**
 	 * Find datum metadata for a given source.
-	 * 
+	 *
 	 * @param sourceId
 	 *        the sourceId to get the metadta for
 	 * @return the metadata, or {@code null} if none available
 	 */
+	@Nullable
 	GeneralDatumMetadata getSourceMetadata(String sourceId);
 
 	/**
 	 * Get datum stream metadata.
-	 * 
+	 *
 	 * @param kind
 	 *        the stream kind
 	 * @param objectId
@@ -81,6 +82,7 @@ public interface DatumMetadataService {
 	 * @return the metadata, or {@code null} if not available
 	 * @since 1.1
 	 */
+	@Nullable
 	ObjectDatumStreamMetadata getDatumStreamMetadata(ObjectDatumKind kind, Long objectId,
 			String sourceId);
 
